# papernews

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sources.toml
papernews/: cli.py  extract.py  fetch.py  llm.py  preview.py  render.py  rewrite.py  store.py  summarize.py  template.tex.j2  web.py  wiki.py
tests/: test_web_features.py
